--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "mvp.css": "^1.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -40,6 +39,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.30.3",
+    "@testing-library/user-event": "^12.8.3",
     "gh-pages": "^3.1.0"
   }
 }
